name:                ComposableEA
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/ComposableEA#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     ComposableEA,
                       Examples
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       lens >= 4.12.3,
                       random >= 1.1,
                       mtl >= 2.2.1,
                       transformers >= 0.4.2.0,
                       containers >= 0.5.6.2

